--- a/webapp/src/main/webapp/resources/css/calendarBox.css
+++ b/webapp/src/main/webapp/resources/css/calendarBox.css
@@ -15,30 +15,31 @@
     align-items: center;
     gap: 1rem;
     width: 100%;
-    height: auto;
+    height: 50%;
     background-color: var(--onbackground);
-    border: 1px solid var(--lighttext);
+    color: var(--primary);
+    border: 1px solid var(--primary);
     border-radius: var(--border-radius);
     transform: translateY(-4px) ;
-    box-shadow: -3px 5px 0 0 var(--lighttext);
+    box-shadow: -3px 5px 0 0 var(--primary);
 }
 .wrapper header{
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-between;
 }
 header .icons{
     display: flex;
 }
 header .icons span {
-    height: 30px;
-    width: 30px;
-    margin: 0 1px;
+    height: 50px;
+    width: 50px;
+    margin: 1px;
     cursor: pointer;
     color: var(--primary);
     text-align: center;
-    line-height: 15px;
-    font-size: 1.5rem;
+    line-height: 50px;
+    font-size: 2rem;
     user-select: none;
     border-radius: 50%;
     display: flex; /* Center the content horizontally and vertically */
@@ -54,7 +55,7 @@ header .icons span:hover{
     background: var(--secondary);
 }
 header .current-date{
-    font-size: 1rem;
+    font-size: 2rem;
     font-weight: 500;
     color: var(--text);
     cursor: default;
@@ -84,7 +85,7 @@ header .current-date{
 .calendar li {
     color: var(--text);
     width: calc(100% / 7);
-    font-size: 0.7rem;
+    font-size: 1rem;
     text-align: center; /* Center the text within each day */
     padding: 5px; /* Add some padding to space out the days */
 }
@@ -110,8 +111,8 @@ header .current-date{
     content: "";
     left: 50%;
     top: 50%;
-    height: 22px; /* Reduce the height and width to make the circle smaller */
-    width: 22px; /* Reduce the height and width to make the circle smaller */
+    height: 35px; /* Reduce the height and width to make the circle smaller */
+    width: 35px; /* Reduce the height and width to make the circle smaller */
     z-index: -1;
     border-radius: 50%;
     transform: translate(-50%, -50%);
@@ -121,4 +122,25 @@ header .current-date{
 }
 .days li:not(.active):hover::before{
     background: var(--secondary);
+}
+
+.calendar .days li.event {
+    z-index: 1;
+    cursor: pointer;
+    position: relative;
+    margin-top: 15px;
+    color: var(--onbackground); /* Set the text color to white */
+}
+
+.calendar .days li.event::before {
+    position: absolute;
+    content: "";
+    left: 50%;
+    top: 50%;
+    height: 35px;
+    width: 35px;
+    z-index: -1;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    background: var(--accent); /* Use the --accent color for the circle */
 }
