--- a/webapp/src/main/webapp/resources/css/landingPage.css
+++ b/webapp/src/main/webapp/resources/css/landingPage.css
@@ -155,6 +155,7 @@
 }
 
 .input {
+    width: 100%;
     height: 40px;
     border-radius: var(--border-hard);
     border: 1px solid var(--primary);
@@ -225,6 +226,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    width: 300px;
 }
 /**/
 
