--- a/webapp/src/main/webapp/resources/css/landingPage.css
+++ b/webapp/src/main/webapp/resources/css/landingPage.css
@@ -88,15 +88,16 @@
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     box-shadow: 0 0 0 0 var(--primary);
+    &:hover ,
+    &:active ,
+    &:focus {
+        transform: translateY(-4px) ;
+        box-shadow: 0 5px 0 0 var(--primary);
+        color: var(--primary);
+    }
 }
 
-.action-button:hover ,
-.action-button:active ,
-.action-button:focus {
-    transform: translateY(-4px) ;
-    box-shadow: 0 5px 0 0 var(--primary);
-    color: var(--primary);
-}
+
 
 /*----------------------------------- LOGIN POPUP --------------------*/
 .dialog {
@@ -166,17 +167,16 @@
     padding: 5px 10px;
     outline: none;
     transition: all 0.3s ease-in-out;
-}
-
-.input::placeholder {
-    color: var(--lighttext);
-    opacity: 0.8;
-}
-.input:active,
-.input:hover,
-.input:focus-visible {
-    transform: translateY(-4px) ;
-    box-shadow: 4px 4px var(--primary);
+    &::placeholder {
+        color: var(--lighttext);
+        opacity: 0.8;
+    }
+    &:active,
+    &:hover,
+    &:focus-visible{
+        transform: translateY(-4px) ;
+        box-shadow: 4px 4px var(--primary);
+    }
 }
 
 
@@ -213,11 +213,12 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    &.light-text{
+        color: var(--lighttext);
+    }
 }
 
-.centered-row.light-text{
-    color: var(--lighttext);
-}
+
 
 .centered-column{
     margin: 1rem;
@@ -228,7 +229,6 @@
     gap: 10px;
     width: 300px;
 }
-/**/
 
 .cool-select {
     font-size: 15px;
@@ -241,20 +241,21 @@
     padding: 5px 10px;
     outline: none;
     transition: all 0.3s ease-in-out;
+
+    &::placeholder {
+        color: var(--lighttext);
+        opacity: 0.8;
+    }
+    &:active,
+    &:hover,
+    &:focus-visible
+    &:focus,
+    &:focus-visible{
+        transform: translateY(-4px) ;
+        box-shadow: 4px 4px var(--primary);
+    }
 }
 
-.cool-select::placeholder {
-    color: var(--lighttext);
-    opacity: 0.8;
-}
-.cool-select:active,
-.cool-select:hover,
-.cool-select:focus-within,
-.cool-select:focus,
-.cool-select:focus-visible {
-    transform: translateY(-4px) ;
-    box-shadow: 4px 4px var(--primary);
-}
 
 .landing-error{
     color: var(--error);
