--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -697,6 +697,7 @@ input[type=file] {
     background: var(--background);
     border-radius: 10px;
     border: 1px solid var(--bordercolor);
+    &::-webkit-file-upload-button,
     &::file-selector-button {
         margin-right: 20px;
         border: none;
@@ -706,11 +707,13 @@ input[type=file] {
         color: var(--background);
         cursor: pointer;
         transition: background .2s ease-in-out;
-        &:hover {
-            background: var(--primary);
-        }
     }
 }
+input[type=file]::file-selector-button:hover{
+    background: var(--primary);
+}
+
+
 
 
 /*-- loading --*/
