--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -1134,7 +1134,8 @@ input[type=file]::file-selector-button:hover {
 }
 
 /*-------------------PAGINATION SELECTOR -----------------------------------*/
-.pagination {
+.pagination,
+.rejected-switch {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1201,6 +1202,59 @@ input[type=file]::file-selector-button:hover {
     }
 }
 
+/*-------------------SWITCH -----------------------------------*/
+.switch-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: var(--onbackground);
+    margin: 5px;
+    transition: all 0.3s ease-in-out;
+    position: relative;
+    transform: translateY(0);
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 110%;
+        bottom: -4px;
+        left: 0;
+        -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+        pointer-events: none;
+    }
+    &.small-a {
+        width: 100px;
+        height: 30px;
+        font-size: 16px;
+        padding: 4px;
+    }
+
+    &:hover:not(.active, .rejected) {
+        transform: translateY(-4px);
+        box-shadow: 0 4px 0 0 var(--primary);
+        color: var(--primary);
+    }
+
+    &.active {
+        transform: translateY(-4px);
+        border: 1px solid var(--background);
+        box-shadow: 0 4px 0 0 var(--primary);
+        color: var(--background);
+        background-color: var(--primary);
+    }
+    &.rejected {
+        transform: translateY(-4px);
+        border: 1px solid var(--background);
+        box-shadow: 0 4px 0 0 var(--error);
+        color: var(--background);
+        background-color: var(--error);
+    }
+}
 
 /*-------------------------FOOTER ------------------------------*/
 
