--- a/webapp/front/front/src/app/components/blogpost/blogpost.component.html
+++ b/webapp/front/front/src/app/components/blogpost/blogpost.component.html
@@ -75,7 +75,7 @@
 
           <!-- Assuming postTags is an array property in your component -->
           <ng-container *ngFor="let tag of post?.tags">
-            <a [href]="generateTagUrl(tag.tag)"
+            <a routerLink= "/" [queryParams]="{tag: tag.tag}"
                class="post-tag static m-l-3 m-r-3"
                >
               {{ tag.tag }}
