--- a/webapp/front/front/src/app/components/left-column/left-column.component.html
+++ b/webapp/front/front/src/app/components/left-column/left-column.component.html
@@ -36,17 +36,17 @@
               </a>
               <div class="divider"></div>
             </c:if>-->
-            <a id="announcementsButton" href="${pageContext.request.contextPath}/announcements"
+            <a id="announcementsButton" routerLink="/" queryParams="{channel: 'Announcements'}"
                class="cool-left-button  ${channel == 'Announcements' ? 'active' : ''} f-r-sb-c">
               <i class="fas fa-bullhorn"></i>
               <span i18n>Announcements</span>
             </a>
-            <a id="feedButton" href="${pageContext.request.contextPath}/"
+            <a id="feedButton" routerLink="/"
                class="cool-left-button  ${channel == 'Feed' ? 'active' : ''} f-r-sb-c">
               <i class="fas fa-comments"></i>
               <span i18n>Feed</span>
             </a>
-            <a id="complaintsButton" href="${pageContext.request.contextPath}/complaints"
+            <a id="complaintsButton" routerLink="/" queryParams="{channel: 'Complaints'}"
                class="cool-left-button ${channel == 'Complaints' ? 'active' : ''} f-r-sb-c">
               <i class="fas fa-envelope"></i>
               <span i18n>Complaints</span>
@@ -55,25 +55,25 @@
           </div>
           <div class="f-c-c-c second">
             <div class="divider"></div>
-            <a id="marketplaceButton" href="${pageContext.request.contextPath}/marketplace/products/all"
+            <a id="marketplaceButton" routerLink="/marketplace"
                class="cool-left-button lila ${channel == 'Marketplace' ? 'active' : ''} f-r-sb-c">
               <i class="fa-solid fa-store"></i>
               <span i18n>Marketplace</span>
 
             </a>
-            <a id="servicesButton" href="${pageContext.request.contextPath}/services"
+            <a id="servicesButton" routerLink="/services"
                class="cool-left-button ${channel == 'Services' ? 'active' : ''} f-r-sb-c">
               <i class="fa-solid fa-handshake-angle"></i>
               <span i18n>Services</span>
 
             </a>
-            <a id="reservationsButton" href="${pageContext.request.contextPath}/amenities"
+            <a id="reservationsButton" routerLink="/reservations"
                class="cool-left-button ${channel == 'Reservations' ? 'active' : ''} f-r-sb-c">
               <i class="fas fa-calendar-days"></i>
               <span i18n>Reservations</span>
 
             </a>
-            <a id="informationButton" href="${pageContext.request.contextPath}/information"
+            <a id="informationButton" routerLink="/information"
                class="cool-left-button ${channel == 'Information' ? 'active' : ''} f-r-sb-c">
               <i class="fa-solid fa-circle-info"></i>
               <span i18n>Information</span>
