--- a/webapp/front/front/src/app/components/navbar/navbar.component.html
+++ b/webapp/front/front/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <div class="container-xl">
       <div class="d-flex justify-content-between align-items-center w-100">
         <!--href="${pageContext.request.contextPath}/${loggedUser.role == 'WORKER' ? 'services' : ''}"-->
-        <a class="navbar-brand" href="">
+        <a class="navbar-brand" routerLink="/">
           <div class="f-r-c-c">
             <svg class="svg-logo" width="55" height="54" viewBox="0 0 711 676" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M277 516.5C173.471 510.748 88.3725 601.154 52.731 653.054C50.7792 655.896 46.266 653.887 47.3215 650.605C79.3442 551.024 177.991 468.147 237.5 463C330 455 349.786 487.698 508 495C610.89 499.749 667.55 468.655 702.824 435.796C705.542 433.265 712.003 437.933 710.028 441.079C684.305 482.063 637.028 535 537 535C382.571 535 430 525 277 516.5Z" fill="var(--background)"></path>
